azuredeploy.json
{
   "$schema":"http://schema.management.azure.com/schemas/2014-04-01-preview/deploymentTemplate.json",
   "contentVersion":"1.0.0.0",
   "parameters":{
      "adminUsername":{
         "type":"string",
         "minLength":5,
         "metadata":{
            "description":"Admin username for the Virtual Machine."
         }
      },
      "sshKeyData":{
         "type":"string",
         "metadata":{
            "description":"SSH rsa public key file as a string."
         }
      },
      "vmSize":{
         "type":"string",
         "metadata":{
            "description":"Size of the Virtual Machine that will be deployed."
         }
      }
   },
   "variables":{
      "vmName":"ripple-validator",
      "ubuntuOSVersion":"17.10",
      "uniqueDnsLabelPrefix":"[concat('store', uniquestring(resourceGroup().id))]",
      "location":"[resourceGroup().location]",
      "imagePublisher":"Canonical",
      "imageOffer":"UbuntuServer",
      "addressPrefix":"10.0.0.0/16",
      "subnet1Name":"ripple-subnet",
      "subnet1Prefix":"10.0.0.0/24",
      "nicName":"ripple-nic",
      "publicIPAddressName":"ripple-ip",
      "publicIPAddressType":"Dynamic",
      "virtualNetworkName":"ripple-vnet",
      "networkSecurityGroupName":"ripple-nsg",
      "sshKeyPath":"[concat('/home/',parameters('adminUsername'),'/.ssh/authorized_keys')]",
      "vnetID":"[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
      "subnet1Ref":"[concat(variables('vnetID'),'/subnets/',variables('subnet1Name'))]",
      "apiVersion":"2015-06-15"
   },
   "resources":[
      {
         "apiVersion":"2015-06-15",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName')]",
         "location":"[variables('location')]",
         "properties":{
            "securityRules":[
               {
                  "name":"ssh_rule",
                  "properties":{
                     "description":"Locks inbound down to ssh default port 22.",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"22",
                     "sourceAddressPrefix":"*",
                     "destinationAddressPrefix":"*",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"inbound_ripple_rule",
                  "properties":{
                     "description":"Allows inbound connections to 51235.",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"51235",
                     "sourceAddressPrefix":"*",
                     "destinationAddressPrefix":"*",
                     "access":"Allow",
                     "priority":101,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"outbound_ripple_rule",
                  "properties":{
                     "description":"Allows outbound connections on 51235.",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"51235",
                     "sourceAddressPrefix":"*",
                     "destinationAddressPrefix":"*",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Outbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2015-06-15",
         "type":"Microsoft.Network/publicIPAddresses",
         "name":"[variables('publicIPAddressName')]",
         "location":"[variables('location')]",
         "properties":{
            "publicIPAllocationMethod":"[variables('publicIPAddressType')]",
            "dnsSettings":{
               "domainNameLabel":"[variables('uniqueDnsLabelPrefix')]"
            }
         }
      },
      {
         "apiVersion":"2015-06-15",
         "type":"Microsoft.Network/virtualNetworks",
         "name":"[variables('virtualNetworkName')]",
         "location":"[variables('location')]",
         "dependsOn":[
            "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
         ],
         "properties":{
            "addressSpace":{
               "addressPrefixes":[
                  "[variables('addressPrefix')]"
               ]
            },
            "subnets":[
               {
                  "name":"[variables('subnet1Name')]",
                  "properties":{
                     "addressPrefix":"[variables('subnet1Prefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                     }
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2015-06-15",
         "type":"Microsoft.Network/networkInterfaces",
         "name":"[variables('nicName')]",
         "location":"[variables('location')]",
         "dependsOn":[
            "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
            "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
         ],
         "properties":{
            "ipConfigurations":[
               {
                  "name":"ipconfig1",
                  "properties":{
                     "privateIPAllocationMethod":"Dynamic",
                     "publicIPAddress":{
                        "id":"[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                     },
                     "subnet":{
                        "id":"[variables('subnet1Ref')]"
                     }
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2016-04-30-preview",
         "type":"Microsoft.Compute/virtualMachines",
         "name":"[variables('vmName')]",
         "location":"[variables('location')]",
         "dependsOn":[
            "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
         ],
         "properties":{
            "hardwareProfile":{
               "vmSize":"[parameters('vmSize')]"
            },
            "osProfile":{
               "computerName":"[variables('vmName')]",
               "adminUsername":"[parameters('adminUsername')]",
               "linuxConfiguration":{
                  "disablePasswordAuthentication":true,
                  "ssh":{
                     "publicKeys":[
                        {
                           "path":"[variables('sshKeyPath')]",
                           "keyData":"[parameters('sshKeyData')]"
                        }
                     ]
                  }
               }
            },
            "storageProfile":{
               "imageReference":{
                  "publisher":"[variables('imagePublisher')]",
                  "offer":"[variables('imageOffer')]",
                  "sku":"[variables('ubuntuOSVersion')]",
                  "version":"latest"
               },
               "osDisk":{
                  "createOption":"FromImage"
               }
            },
            "networkProfile":{
               "networkInterfaces":[
                  {
                     "id":"[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
                  }
               ]
            }
         },
         "resources":[
            {
               "apiVersion":"2015-06-15",
               "type":"extensions",
               "name":"config-validator",
               "location":"[resourceGroup().location]",
               "dependsOn":[
                  "[concat('Microsoft.Compute/virtualMachines/', concat(variables('vmName'),copyindex()))]"
               ],
               "tags":{
                  "displayName":"configure-validator"
               },
               "properties":{
                  "publisher":"Microsoft.Azure.Extensions",
                  "type":"CustomScript",
                  "typeHandlerVersion":"2.0",
                  "autoUpgradeMinorVersion":true,
                  "settings":{
                     "fileUris":[
                        "https://raw.githubusercontent.com/zapstergateway/ripple-validator-ubuntu-azure-deployment/master/scripts/configure-validator.sh"
                     ]
                  },
                  "protectedSettings":{
                     "commandToExecute":"sudo sh configure-validator.sh"
                  }
               }
            }
         ]
      }
   ],
   "outputs":{
      "sshCommand":{
         "type":"string",
         "value":"[concat('ssh ', parameters('adminUsername'), '@', variables('uniqueDnsLabelPrefix'), '.', resourceGroup().location, '.cloudapp.azure.com')]"
      }
   }
}
